client screen added(List of clients and possibility to a client)

--- a/app/src/main/res/menu/menu_search_sales.xml
+++ b/app/src/main/res/menu/menu_search_sales.xml
@@ -6,6 +6,7 @@
         app:showAsAction="ifRoom"
         android:title="@string/search_sale" />
     <item android:id="@+id/menu_scan_qr_sales"
+        android:visible="false"
         android:icon="@drawable/ic_qrcode"
         app:showAsAction="ifRoom"
         android:title="@string/scan_qr_sale" />
