--- a/app/src/main/res/layout/fragment_survey_question.xml
+++ b/app/src/main/res/layout/fragment_survey_question.xml
@@ -18,10 +18,12 @@
 
     <Button
         android:id="@+id/submit_survey_answer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Subemeter Resposta"
+        android:textColor="@color/mdtp_white"
         app:layout_anchor="@+id/recyclerView"
+        android:backgroundTint="@color/colorPrimary"
         app:layout_anchorGravity="bottom|center" />
 
     <TextView
