--- a/app/src/main/res/layout/fragment_add_sale.xml
+++ b/app/src/main/res/layout/fragment_add_sale.xml
@@ -130,12 +130,12 @@
 
                             <AutoCompleteTextView
                                 android:id="@+id/act_total"
-                                android:clickable="false"
+                                android:clickable="true"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
                                 android:singleLine="true"
-                                android:focusable="false"/>
+                                android:focusable="true"/>
 
                         </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
