--- a/app/src/main/res/layout/add_client_alert_dialog.xml
+++ b/app/src/main/res/layout/add_client_alert_dialog.xml
@@ -123,6 +123,7 @@
                         android:hint="@string/act_contact"
                         android:inputType="phone"
                         android:maxLines="1"
+                        android:maxLength="9"
                         android:singleLine="true" />
 
                 </com.google.android.material.textfield.TextInputLayout>
