--- a/app/src/main/res/layout/fragment_add_sale.xml
+++ b/app/src/main/res/layout/fragment_add_sale.xml
@@ -106,9 +106,11 @@
                     android:id="@+id/rg_group_0"
                     >
                     <RadioButton
+                        android:id="@+id/c"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Cash"
+                        android:checked="true"
 
                         />
                     <RadioButton
@@ -241,7 +243,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:id="@+id/ll_installments"
+                    >
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="0dp"
