--- a/app/src/main/res/layout/fragment_add_sale.xml
+++ b/app/src/main/res/layout/fragment_add_sale.xml
@@ -198,7 +198,10 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:hint="@string/act_total_sale"
-                            android:layout_weight="2">
+                            android:layout_weight="2"
+                            android:enabled="false"
+
+                            >
 
                             <AutoCompleteTextView
                                 android:id="@+id/act_total"
